--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
+/Python_WebScraping/BeautifulSoup_pres
 /Python_WebScraping/RealTime_Projects/Instagram
 /Python_WebScraping/RealTime_Projects/reddit.com
